Add semantic linter as a required stage