@@ -1,7 +1,6 @@
 package com.annimon.ownlang.parser.linters;
 
 import com.annimon.ownlang.parser.ast.*;
-import java.util.Collection;
 import java.util.HashSet;
 import java.util.Set;
 
@@ -9,7 +8,7 @@ final class DefaultFunctionsOverrideValidator extends LintVisitor {
 
     private final Set<String> moduleFunctions = new HashSet<>();
 
-    DefaultFunctionsOverrideValidator(Collection<LinterResult> results) {
+    DefaultFunctionsOverrideValidator(LinterResults results) {
         super(results);
     }
 
@@ -17,8 +16,8 @@ final class DefaultFunctionsOverrideValidator extends LintVisitor {
     public void visit(FunctionDefineStatement s) {
         super.visit(s);
         if (moduleFunctions.contains(s.name)) {
-            results.add(new LinterResult(LinterResult.Severity.WARNING,
-                    String.format("Function \"%s\" overrides default module function", s.name)));
+            results.add(LinterResult.warning(
+                    "Function \"%s\" overrides default module function".formatted(s.name)));
         }
     }
 
